# hybrid-rag

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
app/: streamlit_app_v2.py
app/agents/: banking_law_agent.py  fss_standards_agent.py  personal_law_agent.py  web_search_agent.py
app/chroma_db/: chroma.sqlite3
app/llms/: llms.py
app/main/: supervisor_team.py
app/memory_update/: routing_node.py
app/tools/: Tools.py
