[tool.poetry]
name = "hybrid-rag-agent"
version = "0.1.0"
description = "RAG + LLM Agent with ZenML, auto-gptq, LangChain, Gradio, Streamlit etc."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
# Python 버전을 3.11로 고정하여 ZenML 호환성 확보
python = ">=3.11,<3.12"

# --- 전체 의존성 목록 (안정적인 버전 명시) ---

# 데이터베이스 및 파일 처리
neo4j = "^5.18.0"
PyPDF2 = "^3.0.1"

# Hugging Face 생태계
transformers = "^4.40.0"
accelerate = "^0.29.0"
bitsandbytes = "^0.43.0"
optimum = "^1.19.0"
sentence-transformers = "^2.7.0"
huggingface-hub = "^0.23.0"

# LangChain 생태계
langchain = "^0.1.20"
langgraph = "^0.0.48"
langchain-openai = "^0.1.6"
langchain-community = "^0.0.38"
langchain-google-genai = "^1.0.4"

# 데이터 과학 및 ML
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
mlflow = "^2.12.1"

# 웹 및 API 프레임워크
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
gradio = "^4.29.0"
streamlit = "^1.34.0"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"

# ZenML 및 핵심 유틸리티
zenml = { extras = ["server"], version = "^0.56.3" }
pydantic = "^2.7.1"
protobuf = "4.25.3"
ipykernel = "^6.29.4"
ipython = "^8.24.0"
jupyterlab = "^4.2.0"
httpx = "^0.27.0"
types-requests = "^2.31.0"
markdown-it-py = "^3.0.0"
altair = "^5.3.0"
chromadb = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
ruff = "^0.4.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
